# facesBgone

./: .gitignore  CMakeLists.txt  README.md  final_tile_report.json  main.py  method_1.sh  method_2.sh  requirements.txt  rowoutput.ply  rowoutput.stl  run.sh  run_final.sh  runtime.csv  runtime.ipynb  setup.sh  symdif.txt  symdif.xml  test.ply  test.stl  test2.stl
3d-building-metrics/: Synthesis_project_metrics.ipynb  common_walls_Stelios.ipynb  common_walls_modified_Stelios.ipynb  dataset2mb.stl  dataset_2.ply  dataset_2.stl  facesaspolygons.qgz  ids_for_small_dataset.txt  install_pymesh.ipynb  output.ply  pyvista_tests_no_pymesh.ipynb  row.json  rowoutput.ply  rowoutput.stl  symmdiff.py  test.py  test.stl  test.txt  test2.stl  test2.txt  two_buildings_5097.stl  workingsymmdiff.py
3d-building-metrics copy/: 4buildings.json  common_walls_list.ipynb  fourbuildings.json  test3.txt  two_buildings_5097.json
3d-building-metrics/Symdiff/: main.py
3d-building-metrics/Symdiff/data/: dataset_2.json
3d-building-metrics/Symdiff/helpers/: cluster.py
3d-building-metrics/data/: dataset_2.stl  dataset_3.json  dataset_3stage2.stl  dataset_5.stl  dataset_6.json  dataset_6.stl
3d-building-metricsold/: common_walls_Stelios_symmetric_difference.ipynb
Adjacancy/: cityjson.py  main.py  requirements.txt  symdiff.py
Adjacancy/data/: Outputtile_mesh.stl  adjacencies_final.txt  fengyan_adjacencies.txt  invalid_buildings_5907.txt  invalid_buildings_dataset_5.txt
Adjacancy/helpers/: bbox.py  cluster.py  geometry.py
Symdiff/: main.py  symdiff.py
Symdiff/data/: Output.stl  dataset_all.json
Symdiff/helpers/: bbox.py  geometry.py
Synthesis-Project-adele/: CMakeLists.txt
Synthesis-Project-adele/3d-building-metrics-main/: adjacent_faces.py  cityStats.py  cityStats_modified.ipynb  cityStats_modified.py  cluster.vtk  common_walls.py  geometry.py  pyvista_tests_no_pymesh.py
Synthesis-Project-adele/src/: main.cpp
adjacency/: main.py  requirements.txt  symdiff.py
adjacency/helpers/: cluster.py
amsblock/Final/: amsblock2final.stl  amsblockfinal.stl  dataset_2final.stl
amsblock/Symdiff/: amsblock.stl  dataset_1.stl  dataset_3.stl  dataset_4.stl  dataset_5.stl
data/: Outputtile_mesh.stl  Outputtile_mesh3.stl  adjacencies.txt  adjacency.txt  amsblock.json  amsblock2.json  amsblock2.stl  dataset_1.stl  dataset_2.stl  dataset_234.json  dataset_2_old?.stl  dataset_2sym.stl  dataset_34.json  dataset_345.json  dataset_3456.json  dataset_3_testing.stl  dataset_3mb.stl  dataset_3stage1.stl  dataset_3sym.stl  dataset_4.json  dataset_4.stl  dataset_4try.stl  dataset_5.json  example.json  final_tile_report.json  hole-filling-Output.stl  nef-Output.stl  out.json  two_buildings_5097.ply  two_buildings_5097.stl
hole-filling/: CMakeLists.txt
hole-filling/src/: JsonHandler.h  Polyhedron.h  main.cpp
include/: cmdline.h
nef/: CMakeLists.txt
nef/src/: JsonWriter.hpp  MultiThread.hpp  Polyhedron.hpp  copy.cpp  main.cpp  readme.md
pycode/: Analysis.ipynb  Figures.ipynb  README.md  __init__.py  blocks_of_adjacent_buildings_subset_5907.json  cityCompare.py  cityPlot.py  cityStats.py  cityjson.py  common_walls.py  common_walls_Stelios_symmetric_difference.ipynb  common_walls_modified_Stelios.ipynb  extractLod.py  geometry.py  ids_for_small_dataset.txt  notebook.sh  pyvista_tests.ipynb  requirements.txt  shape_index.py  symmdiff.py  volume.py
pycode/helpers/: geometry.py  mesh.py  minimumBoundingBox.py  smallestenclosingcircle.py
src/: JsonHandler.hpp  backup_main.txt  copy.cpp  main.cpp
